# pyrad-server

./: .gitignore  LICENSE.rst  README.md  dump.rdb  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  entrypoint.sh
conf/: dictionary  test-config.yml
src/pyrad_server/: cli.py
src/pyrad_server/api/: app.py
src/pyrad_server/config/: loader.py  schema.py  settings.py
src/pyrad_server/radius/: backend.py  matching.py  pools.py  redis_storage.py  replies.py  server.py
src/pyrad_server/storage/: redis_store.py
src/pyrad_server/tools/: pyrad_test_client.py
src/pyrad_server/udp/: codecs.py  pyrad_codecs.py  server.py
tests/config/: test_config_loader_and_schema.py
tests/radius/: test_backend_integration.py  test_matching.py  test_pools.py  test_replies.py
tests/storage/: test_redis_dialog_store.py
tests/tools/: test_pyrad_auth_password.py  test_pyrad_test_client.py
tests/udp/: test_pyrad_codecs.py  test_udp_protocol.py
