[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyrad-server"
version = "0.1.0"
description = "RADIUS server derived from pyrad-pfs"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE.rst" }
authors = [{ name = "Stefan" }]
dependencies = [
  "fastapi>=0.110",
  "orjson>=3.9",
  "pydantic>=2.12",
  "pyrad @ git+https://github.com/slieberth/pyrad.git@development-slieberth",
  "redis>=4.5",
  "uvicorn[standard]>=0.27",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10",
  "pre-commit>=3.0",
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.6",
  "types-PyYAML",
]

[project.scripts]
pyrad-server = "pyrad_server.cli:main"
pyrad-test-client = "pyrad_server.tools.pyrad_test_client:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["pyrad_server*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "integration: requires running pyrad-server",
]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
